[tool.poetry]
name = "async-download"
version = "0.1.0"
description = ""
authors = ["alex <qwertin2505@gmail.com>"]
readme = "README.md"
packages = [{include = "async_download"}]

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^22.1.0"
aiohttp = "^3.8.3"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
mypy = "^0.991"
types-aiofiles = "^22.1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
